Fix screen overlap in FeatureStorePreview feature

--- a/features/featureStorePreview/src/styles.css
+++ b/features/featureStorePreview/src/styles.css
@@ -18,6 +18,13 @@
     src: url("../fonts/jost_bold.ttf");
 }
 
+.feature-store-preview {
+    position: absolute;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+}
+
 .preview p {
     font-size: var(--font-size-ml);
     white-space: pre-wrap;
